<resources>
    <string name="app_name">Group14_HW05</string>
    <string name="sortByCost">Sort by Cost</string>
    <string name="sortByDate">Sort by Date</string>
    <string name="resetAll">Reset All</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alertDialoguePositive">YES</string>
    <string name="alertDialogueNegative">NO</string>
    <string name="alertDialogueMessage">Do you really want to RESET?</string>
    <string name="addExpenseTitle">Add Expense</string>
    <string name="expenseName">Name:</string>
    <string name="addExpenseCategory">Category</string>
    <string name="addExpenseSelectCategory">Select Category</string>
    <string name="addExpenseAmount">Amount</string>
    <string name="addExpenseButton1">Add Expense</string>
    <string name="addExpenseButton2">Cancel</string>
    <string name="strExpenseDetails">Expense Details</string>
    <string name="strName">Name:</string>
    <string name="strCategory">Category:</string>
    <string name="strAmount">Amount:</string>
    <string name="strDate">Date:</string>
    <string name="strClose">Close</string>
    <string name="expenseAppCurrentExpenses">Current Expenses:</string>
    <string name="expenseButton1">Add</string>
    <string name="ExpenseMessage">There is no expense to show, Please add your expenses from the menu.</string>
    <string name="editExpense">Edit Expense</string>
    <string name="EditExpenseTitle">Edit Expense</string>
    <string name="EditExpenseSave">Save</string>
    <string name="totalExpenseValueHeader">Total:</string>
    <string name="addExpenseCost">Cost:</string>
    <string name="pickDate">Pick a Date</string>
    <string name="addExpenseReceiptHeader">Receipt:</string>
    <string name="buttonChooseImage">Choose an Image</string>
</resources>
